# mech-forza-control

./: .gitignore  AGENTS.md  PKGBUILD  README.md  ec.cmd  ec_io.py  pyproject.toml
docs/: cli-reference.md  ec-ac-recovery-findings.md  ec-battery-charging-findings.md  ec-fan-control-findings.md  ec-kmod-feasibility.md  ec-register-map.md  keyboard-backlight.md  perf.md
docs/llm/: ec-battery-charging-findings.md  ec-fan-control-findings.md  ec-mode-switch.md  ec-setting-controls.md
ec/: __main__.py  backlight.py  fan.py  io.py  mode.py
src/: __main__.py  backlight.py  battery.py  config.py  ec_kb_backlight.py  ec_switch_mode.py  fan.py  io.py  mode.py  setting.py
src/backends/: __init__.py  base.py  linux.py
src/ec/: __init__.py  __main__.py  backlight.py  battery.py  config.py  fan.py  io.py  mode.py  setting.py  state.py
src/ec/backends/: linux.py  windows.py
systemd/: mechrevo-ec-apply.service
tests/: conftest.py  test_battery.py  test_ec_rw.py  test_io.py  test_state.py
tools/: ec_fan.py  ec_probe.py  ec_rw.py  mqtt_pub.py  mqtt_sniff.py  switch_mode.py
