[project]
name = "mechrevo-ec"
version = "0.1.0"
description = "Mechrevo notebook EC direct control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "mechrevo-ec contributors" },
]
license = "MIT"
keywords = ["ec", "mechrevo", "fan-control", "keyboard-backlight"]

[project.scripts]
mfc = "src.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
